# chemmine-ei

./: .gitignore  Makefile.am  README  README.md  config.py  configure.ac  ei.py  ode.py
data/: test_query.iddb
dead_code/: assei.py
dead_code/atompair/: bdb_import.cc  bdb_verify.cc  compare.cc  db_compare_server.cc  db_isearch.cc  db_search.cc  db_search_range.cc  db_size.cc  refinement.cc
dead_code/euclidean-search/: knn-self.cc  knn.cc  split.cc
dead_code/lshkit/test.old/: Makefile.am  fp_isearch  scan.cpp  search.copy.temp  search_server.cpp
debian/: README  README.Debian  README.source  changelog  control  copyright  ei.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
m4/: ax_pkg_swig.m4  ax_swig_enable_cxx.m4  ax_swig_python.m4
man/: Makefile.am  ei.py.1
src/: Makefile  Makefile.am  assei.py  ei-db2db_distance.fmcs  ei-db_builder.fmcs  ei-db_subset.fmcs  ei-evaluator  ei-qsub  ei.py  ode.py
src/atompair/: .cproject  .project  Makefile.am  Makefile.old  Makefile.openbabel  bdbdb.cc  db2db_distance.cc  db2db_distance_r.cc  db_build.cc  db_build.h  db_merge.py  db_search.cc  db_search_self.cc  db_subset.cc  formats.cc  fp_search_server  fp_search_server.cc  helpers.cc  helpers.h  refine-server.py  script.cc  script.h  search.cc  search.h  simpledb.cc  simpledb.h  swig.i
src/atompair/R/: Makefile.am  Makefile.old
src/atompair/R/.svn/: entries
src/atompair/R/ChemmineRpp/: DESCRIPTION  NAMESPACE
src/atompair/R/ChemmineRpp/.svn/: entries
src/atompair/R/ChemmineRpp/.svn/text-base/: NAMESPACE.svn-base
src/atompair/R/ChemmineRpp/R/: ChemmineRpp.R
src/atompair/R/ChemmineRpp/R/.svn/: entries
src/atompair/R/ChemmineRpp/src/: Makevars  db_build.cc  desc.cc  desc.h  formats.cc  molecule.cc  r_wrap.cc  script.cc  script.h  similarity.cc  simpledb.cc  simpledb.h
src/atompair/R/ChemmineRpp/src/.svn/: entries
src/atompair/python/: Makefile.am  README  setup.py
src/atompair/python/.svn/: entries
src/atompair/python/.svn/text-base/: Makefile.svn-base
src/atompair/python/descriptors/: __init__.py
src/atompair/python/descriptors/.svn/: entries
src/atompair/python/src/.svn/: entries
src/clustering/: Makefile.am  cluster.cc
src/ei_R/: Makefile.am  eiR.R.patch  swig.i
src/ei_R/eiR/: DESCRIPTION  NAMESPACE  README
src/ei_R/eiR/R/: core.R  evaluations.R  measures.R
src/ei_R/eiR/inst/doc/: eiR.Rtex
src/ei_R/eiR/inst/runit/: runit.eiInit.r
src/ei_R/eiR/inst/unitTests/: test_main.R
src/ei_R/eiR/man/: addTransform.Rd  eiAdd.Rd  eiCluster.Rd  eiInit.Rd  eiMakeDb.Rd  eiPerformanceTest.Rd  eiQuery.Rd  setDefaultDistance.Rd
src/ei_R/eiR/src/: Makevars
src/ei_R/eiR/src/f2c/: Makefile
src/ei_R/eiR/tests/: test.R
src/ei_fmcs/: Makefile.am  __init__.py
src/embedder/: Makefile.am  Makefile.old  coord.cc  coord.py  coord_server.cc  embedCoords.cc  icoord.cc  solver.cc
src/euclidean-search/: Makefile.am  Makefile.old  compare.py  eucsearch.h  mk_record_file.py  random-pair.py  recordfile_srtree-format.cc  rnn.cc  scan.cc  search.cc  search.h  self.cc  subset_record_file.py
src/eutils/: Makefile.am  __init__.py  coord.py  elog.config  fpdbcompare.py  lshsearch.py  refineserver.py
src/eutils/fp/: fpcdb.py  p-fpcdb.py  pubchemfp.py
src/lshkit/: .hgignore  Makefile.inc
src/lshkit/.hg/: dirstate  undo.dirstate
src/lshkit/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
src/lshkit/.hg/store/data/: _makefile.i  _makefile.inc.i  _r_e_a_d_m_e.i
src/lshkit/.hg/store/data/formatter/: build.sh.i  buildbenchmark.py.i  format.cc.i
src/lshkit/.hg/store/data/include/: btune.h.i  lshkit.h.i
src/lshkit/.hg/store/data/include/lshkit/: adaptor.h.i  common.h.i  composite.h.i  concept.h.i  eval.h.i  flat-index.h.i  forest-index.h.i  histogram.h.i  lsh-file.h.i  lsh.h.i  matrix-io.h.i  matrix.h.i  metric.h.i  mplsh-file.h.i  mplsh-model.h.i  mplsh.h.i  param-fitting.h.i  sketch.h.i  storage.h.i  topk.h.i
src/lshkit/.hg/store/data/src/: _makefile.i  btune.cpp.i  cache.cpp.i  file-glibc.cpp.i  mplsh-file.cpp.i  mplsh-model.cpp.i  mplsh.cpp.i
src/lshkit/.hg/store/data/test/: _makefile.i  fitdata.cpp.i  flat-index.cpp.i  isearch.cpp.i  mkmplsh.cpp.i  mplsh-predict.cpp.i  mplsh-tune.cpp.i  mplsh.cpp.i  mplsh2.cpp.i  mplsh2p.cpp.i  runmplsh.cpp.i  scan.cpp.i  search.cpp.i  searchp.cpp.i  test-probe.cpp.i
src/lshkit/.svn/: all-wcprops  entries
src/lshkit/.svn/text-base/: Makefile.inc.svn-base  Makefile.svn-base
src/lshkit/formatter/: build.sh  buildbenchmark.py  format  read
src/lshkit/include/.svn/: all-wcprops  entries
src/lshkit/include/.svn/text-base/: btune.h.svn-base  lshkit.h.svn-base
src/lshkit/include/lshkit/: eval.h  flat-index.h  histogram.h  lsh-file.h  matrix-io.h  matrix.h  mplsh-model.h  mplsh.h  topk.h
src/lshkit/include/lshkit/.svn/: all-wcprops  entries
src/lshkit/include/lshkit/.svn/text-base/: common.h.svn-base  composite.h.svn-base  concept.h.svn-base  forest-index.h.svn-base  lsh.h.svn-base  matrix-io.h.svn-base  matrix.h.svn-base  metric.h.svn-base  mplsh-model.h.svn-base  param-fitting.h.svn-base  sketch.h.svn-base  storage.h.svn-base
src/lshkit/src/: Makefile  Makefile.am  btune.cpp  file-glibc.cpp  mplsh-file.cpp  mplsh.cpp
src/lshkit/src/.svn/: all-wcprops  entries
src/lshkit/src/.svn/text-base/: mplsh-model.cpp.svn-base  mplsh.cpp.svn-base
src/lshkit/test/: Makefile  Makefile.am  fitdata.cpp  isearch.cpp  mplsh.cpp  search.cpp  searchp.cpp  test-probe.cpp
src/lshkit/test/.svn/: all-wcprops  entries
src/lshkit/test/.svn/text-base/: Makefile.svn-base  mplsh-predict.cpp.svn-base  mplsh-tune.cpp.svn-base  mplsh.cpp.svn-base
src/lshkit/tools/: Makefile.am  fitdata  fitdata.cpp  mplsh-predict  mplsh-run.cpp  mplsh-tune  scan  search_r.cpp  search_server  search_server.cpp  single_search.cpp
src/matrix/: Makefile.am  Makefile.old  format.cc  read.cc
