program_transform_name = s&^&ei-&

AM_CXXFLAGS = -I ../atompair  -O3 -mtune=nocona -fPIC
#AM_CXXFLAGS .= -DDEBUG -g

bin_PROGRAMS = cluster

cluster_SOURCES = cluster.cc DisjointSets.cpp

#OBJS = cluster.o DisjointSets.o
#EXEC = cluster
##CXXFLAGS = -DDEBUG
##CXXFLAGS = -g
#CXXFLAGS = -O3 -mtune=nocona -fPIC
#
#$(EXEC) : $(OBJS)
#	$(CXX) -o $@ $(OBJS)
#
#.cc.o:
#
#.cpp.o:
#
#clean:
#	rm -f *.o ${EXEC}
